--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
         </ul>
     </div>
 </div>
-<br> 
+<br> <br>
 <hr>
 
 <br>
-
   <h1> hello world </h1>
   
   <div id="hw"> </div>
@@ -41,6 +40,13 @@
     <li> <a href='private/a/a.html'> for jeff </a>
     <li> <a href='private/z/z.html'> for mark </a>
   </ul>
+
+  <br>
+  <hr>
+  <br>
+  <a  class="pure-button" href="/.auth/login/github" >Login</a> 
+  &nbsp; &nbsp;                              
+  <a  class="pure-button" href="/.auth/logout" >Log out</a>
   <script src="index.js"></script>
 </body>
 </html>
