w/ uuid to check fetch

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <a  class="pure-button" href="/.auth/login/github" >Login</a> 
   &nbsp; &nbsp;                              
   <a  class="pure-button" href="/.auth/logout" >Log out</a>
+  &nbsp; &nbsp;                              
+  <div id="uuid"> </div>
   <script src="index.js"></script>
 </body>
 </html>
