change 401 background color

--- a/custom-401.html
+++ b/custom-401.html
@@ -21,7 +21,7 @@
  */
 
 .splash-container {
-    background: #1f8dd6;
+    background: #55636d;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
